objects/JunoDoc__Juno_Doc_Trigger_Action__c/JunoDoc__Juno_Doc_Trigger_Action__c.object-meta.xml
<CustomObject>
    <label>Juno Doc Trigger Action</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Juno Doc Trigger Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Juno Doc Trigger Action</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>