objects/JunoDoc__Juno_Doc_Trigger_Action__c/fields/JunoDoc__Available_Doc_Template__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Available_Doc_Template__c</fullName>
    <label>Available Doc Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>