objects/JunoDoc__Juno_Doc_Trigger_Action__c/fields/JunoDoc__Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Email_Addresses__c</fullName>
    <label>Email Addresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>