objects/JunoDoc__Juno_Doc_Trigger_Action__c/fields/JunoDoc__Email_Fields__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Email_Fields__c</fullName>
    <label>Email Fields</label>
    <type>TextArea</type>
</CustomField>