objects/JunoDoc__Juno_Doc_Trigger_Action__c/fields/JunoDoc__Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Email_Subject__c</fullName>
    <label>Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>