objects/JunoDoc__Juno_Doc_Trigger_Action__c/fields/JunoDoc__Juno_Doc_Trigger__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Juno_Doc_Trigger__c</fullName>
    <label>Juno Doc Trigger</label>
    <referenceTo>JunoDoc__Juno_Doc_Trigger__c</referenceTo>
    <relationshipLabel>Juno Doc Trigger Action</relationshipLabel>
    <relationshipName>Juno_Doc_Trigger_Action</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>