objects/JunoDoc__Juno_Doc_Trigger_Action__c/fields/JunoDoc__Save_as_Activitiy__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Save_as_Activitiy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save as Activitiy</label>
    <type>Checkbox</type>
</CustomField>