objects/JunoDoc__Juno_Doc_Trigger_Action__c/fields/JunoDoc__Set_Reply_To__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Set_Reply_To__c</fullName>
    <label>Set Reply To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>