objects/JunoDoc__Juno_Doc_Trigger_Action__c/fields/JunoDoc__Set_Sender_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Set_Sender_Display_Name__c</fullName>
    <label>Set Sender Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>