objects/JunoDoc__Juno_Doc_Trigger_Action__c/fields/JunoDoc__Standard_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Standard_Email_Template__c</fullName>
    <label>Standard Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>