objects/JunoDoc__Juno_Doc_Trigger_Action__c/fields/JunoDoc__Users_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Users_Email_Addresses__c</fullName>
    <label>Users Email Addresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>